style: add fonts

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,13 @@
+@import url("https://fonts.googleapis.com/css?family=Gelasio&display=swap");
+
 .app {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  
+  font-family: 'Gelasio', serif;
 
   background: lightgray;
 }
