--- a/src/components/Auth/Authentification.css
+++ b/src/components/Auth/Authentification.css
@@ -1,3 +1,10 @@
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .auth-header {
   text-align: center;
 }
