--- a/src/components/SendMessage/SendMessage.css
+++ b/src/components/SendMessage/SendMessage.css
@@ -27,3 +27,15 @@
   color: #ffffff;
   cursor: pointer;
 }
+
+@media (max-width: 800px) {
+  .send-message-field {
+    width: 50%;
+  }
+}
+
+@media (max-width: 350px) {
+  .send-message-field {
+    width: 60%;
+  }
+}
