--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,10 @@
 .footer {
+  padding: 5px 10px;
+  box-sizing: border-box;
   width: 100%;
   height: 4vh;
+  display: flex;
+  align-items: center;
+  font-size: 70%;
   background: grey;
 }
